[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/pixelmix.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/ui/indicator.png" type="Texture" id=2]
[ext_resource path="res://scenes/ui/monologue.gd" type="Script" id=3]
[ext_resource path="res://scenes/ui/customText.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "bob"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("indicator:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 206, 250 ), Vector2( 206, 244 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("indicator:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.54902 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("indicator:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "showInstructions"
tracks/0/type = "value"
tracks/0/path = NodePath("uiText:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 3 ),
"update": 0,
"values": [ Vector2( 129.5, 230 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("uiText:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 5 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("indicator:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("indicator:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 206, 230 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("indicator:rect_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[sub_resource type="Animation" id=3]
resource_name = "still"
length = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("indicator:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 206, 250 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("indicator:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("uiText:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 3 ),
"update": 0,
"values": [ Vector2( 129.5, 230 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("uiText:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 5, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("indicator:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7, 1 ),
"transitions": PoolRealArray( 1, 3, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("indicator:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.9, 1.1, 1.5 ),
"transitions": PoolRealArray( 1, 2, 3, 1 ),
"update": 0,
"values": [ Vector2( 206, 230 ), Vector2( 206, 230 ), Vector2( 206, 226 ), Vector2( 206, 250 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("indicator:rect_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.6, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 4, 2 ), Vector2( 1, 1 ) ]
}

[node name="monologue" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.141176, 0.192157, 0.2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text" parent="." instance=ExtResource( 4 )]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 20.0
margin_top = -44.0
margin_right = -20.0
margin_bottom = 31.0

[node name="uiText" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -80.5
margin_top = -40.0
margin_right = 80.5
margin_bottom = -30.0
rect_scale = Vector2( 1e-05, 1 )
rect_pivot_offset = Vector2( 80.5, 0 )
custom_fonts/font = ExtResource( 1 )
text = "Press SPACE or X to continue"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="indicator" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.671048 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -4.0
margin_top = -24.1619
margin_right = 4.0
margin_bottom = -16.1602
rect_min_size = Vector2( 8, 8 )
rect_pivot_offset = Vector2( 4, 4 )
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="indicatorAnimation" type="AnimationPlayer" parent="."]
anims/bob = SubResource( 1 )
anims/showInstructions = SubResource( 2 )
anims/still = SubResource( 3 )
anims/transition = SubResource( 4 )
[connection signal="fully_displayed" from="text" to="." method="_on_text_fully_displayed"]
